
  Version 4.2.0(January 2nd, 2024)
      [Windows]
      - Fix a bug that caused older version of ffmpeg to be used when user install newer version of MD
       that uses newer version of ffmpeg without first unistalling older version of MD that uses older
       version of ffmpeg.
      [All]
      - Add ability show entries in the library tab in various orders.
      - Add ability to filter and sort media list to easily choose which ones to download.
      - Rework UI options that control checking for updates and autodownloads at startup.

  Version 4.3.0(February 1st, 2024)
      [Windows]
      - Automatic updates of Media Downloader can now be configured to track git updates. Look for
        option named "WindowsUpdateChannel" in the config file and change its value to "git" to start
        monitoring git channel. Change the value back to "release" to go back to monitoring release channel.
      [All]
      - Fix a bug that causes a crash when trying to be clever with certain user provided yt-dlp options.

  Version 4.3.1(February 1st, 2024)
      - Hot fix release so just repeating changelong for version 4.3.0.
      [Windows]
      - Automatic updates of Media Downloader can now be configured to track git updates. Look for
        option named "WindowsUpdateChannel" in the config file and change its value to "git" to start
        monitoring git channel. Change the value back to "release" to go back to monitoring release channel.
      [All]
      - Fix a bug that causes a crash when trying to be clever with certain user provided yt-dlp options.

  Version 4.4.0(Unreleased)
      [Windows]
      - Fix a bug that caused Media Downloader to not show progress report when file names contained invalid
       json character.
      [All]
      - Add a boolean config only option named  "DeleteFilesOnCanceledDownload" to delete temporary files
        when download is cancelled.
     - Add a file size colum in "media options" table to easily show media file sizes.