@@ -153,23 +153,14 @@ else()
 file(WRITE ${PROJECT_BINARY_DIR}/version.h
 "
 #define VERSION \"${PGR_VERSION}.git_tag\"
-#define QTVERSION \"${Qt6Core_VERSION}\"
+#define QTVERSION \"${Qt5Core_VERSION}\"
 #define COPYRIGHT \"${COPYRIGHT_YEARS}\"
 ")
 endif()
 
-if(WIN32)
-    find_path(libstdc_PATH libstdc++-6.dll)
-    find_path(gcc_PATH gcc.exe)
-    find_path(windeployqt_PATH windeployqt.exe PATHS "${CMAKE_PREFIX_PATH}/bin")
+if(BUILD_WITH_QT6)
 
-    file(WRITE ${PROJECT_BINARY_DIR}/media-downloader_installer_commands.txt
-"
-set PATH=${gcc_PATH};${libstdc_PATH};%PATH%\r\n
-${windeployqt_PATH}/windeployqt --release media-downloader.exe\r\n
-")
-
-file(WRITE ${PROJECT_BINARY_DIR}/media-downloader_windows_installer.iss
+file(WRITE ${PROJECT_BINARY_DIR}/media-downloader_windows_installer_Qt5.iss
 "
 ; Script generated by the Inno Setup Script Wizard.
 ; SEE THE DOCUMENTATION FOR DETAILS ON CREATING INNO SETUP SCRIPT FILES!
@@ -180,11 +171,110 @@ file(WRITE ${PROJECT_BINARY_DIR}/media-downloader_windows_installer.iss
 #define MyAppURL             \"https://github.com/mhogomchungu/media-downloader\"
 #define MyAppExeName         \"media-downloader.exe\"
 #define MyAppCopyright       \"${COPYRIGHT_YEARS}, Francis Banyikwa\"
-#define MyLibrariesLocation  \"C:\\projects\\media-downloader.libraries.Qt-${Qt5Core_VERSION}\\\"
 #define MyEXELocation        \"${PROJECT_BINARY_DIR}\\media-downloader.exe\"
 #define MyBuildPath          \"${PROJECT_BINARY_DIR}\"
-#define MyOutPutPath         \"C:\\projects\\media-downloader.installer\\Qt-${Qt5Core_VERSION}\"
-#define MySourcesPath        \"C:\\projects\\media-downloader\\\"
+#define MyLibrariesLocation  \"${LIBRARIES_LOCATION}\"
+#define MyOutPutPath         \"${OUTPUT_PATH}\"
+#define MySourcesPath        \"${SOURCE_PATH}\"
+
+[Setup]
+AppId={{6DD595EF-ECA2-481B-B008-CB7302603A0D}
+AppName={#MyAppName}
+AppVersion={#MyAppVersion}
+AppVerName={#MyAppName} {#MyAppVersion}
+AppCopyright={#MyAppCopyright}
+AppPublisher={#MyAppPublisher}
+AppPublisherURL={#MyAppURL}
+AppSupportURL={#MyAppURL}
+AppUpdatesURL={#MyAppURL}
+VersionInfoDescription={#MyAppName} installer
+VersionInfoProductName={#MyAppName}
+VersionInfoVersion={#MyAppVersion}.0
+UninstallDisplayName={#MyAppName}
+UninstallDisplayIcon={app}\\{#MyAppExeName}
+
+DefaultDirName={pf}\\{#MyAppName}
+LicenseFile={#MySourcesPath}\\LICENSE.txt
+OutputDir={#MyOutPutPath}
+SetupIconFile={#MySourcesPath}\\src\\media-downloader.ico
+Compression=lzma
+SolidCompression=yes
+DisableProgramGroupPage=yes
+OutputBaseFilename=MediaDownloader-${PGR_VERSION}.setup
+
+[Tasks]
+Name: \"desktopicon\"; Description: \"{cm:CreateDesktopIcon}\"; GroupDescription: \"{cm:AdditionalIcons}\"; Flags: unchecked
+Name: \"quicklaunchicon\"; Description: \"{cm:CreateQuickLaunchIcon}\"; GroupDescription: \"{cm:AdditionalIcons}\"; Flags: unchecked; OnlyBelowVersion: 0,6.1
+
+[Files]
+Source: {#MyEXELocation}; DestDir: {app}; Flags: ignoreversion
+Source: {#MyLibrariesLocation}\\*.dll; DestDir: {app} ; Flags: ignoreversion
+Source: {#MySourcesPath}\\LICENSE.txt; DestDir: {app}; Flags: ignoreversion
+Source: {#MyLibrariesLocation}\\bearer\\* ; DestDir: {app}\\bearer; Flags: ignoreversion
+Source: {#MyLibrariesLocation}\\iconengines\\* ; DestDir: {app}\\iconengines; Flags: ignoreversion
+Source: {#MyLibrariesLocation}\\imageformats\\*; DestDir: {app}\\imageformats; Flags: ignoreversion
+Source: {#MyLibrariesLocation}\\styles\\*; DestDir: {app}\\styles; Flags: ignoreversion
+Source: {#MyLibrariesLocation}\\platforms\\*; DestDir: {app}\\platforms; Flags: ignoreversion
+Source: {#MyLibrariesLocation}\\generic\\*; DestDir: {app}\\generic; Flags: ignoreversion
+Source: {#MyLibrariesLocation}\\tls\\*; DestDir: {app}\\tls; Flags: ignoreversion
+Source: {#MyLibrariesLocation}\\networkinformation\\*; DestDir: {app}\\networkinformation; Flags: ignoreversion
+Source: {#MyLibrariesLocation}\\3rdParty\\*; DestDir: {app}\\3rdParty; Flags: ignoreversion recursesubdirs
+Source: {#MySourcesPath}\\translations\\*; DestDir: {app}\\translations; Flags: ignoreversion
+Source: {#MySourcesPath}\\src\\media-downloader.ico; DestDir: {app}\\icons; Flags: ignoreversion
+
+; NOTE: Don't use \"Flags: ignoreversion\" on any shared system files
+
+[Icons]
+Name: \"{commonprograms}\\{#MyAppName}\"; Filename: \"{app}\\{#MyAppExeName}\"; IconFilename: \"{app}\\icons\\media-downloader.ico\"; WorkingDir: \"{app}\"
+;Name: \"{commonprograms}\\Uninstall {#MyAppName}\"; Filename: \"{uninstallexe}\"; IconFilename: \"{app}\\icons\\media-downloader.ico\"; WorkingDir: \"{app}\"
+Name: \"{commondesktop}\\{#MyAppName}\"; Filename: \"{app}\\{#MyAppExeName}\"; IconFilename: \"{app}\\icons\\media-downloader.ico\"; WorkingDir: \"{app}\"; Tasks: desktopicon
+Name: \"{userappdata}\\Microsoft\\Internet Explorer\\Quick Launch\\{#MyAppName}\"; Filename: \"{app}\\{#MyAppExeName}\"; IconFilename: \"{app}\\icons\\media-downloade.ico\"; WorkingDir: \"{app}\"; Tasks: quicklaunchicon
+
+[Run]
+Filename: \"{app}\\{#MyAppExeName}\"; Description: \"{cm:LaunchProgram,{#StringChange(MyAppName, '&', '&&')}}\"; Flags: nowait postinstall skipifsilent
+
+[Languages]
+Name: \"english\"             ; MessagesFile: \"compiler:Default.isl\"
+Name: \"brazilianportuguese\" ; MessagesFile: \"compiler:Languages\\BrazilianPortuguese.isl\"
+Name: \"catalan\"             ; MessagesFile: \"compiler:Languages\\Catalan.isl\"
+Name: \"corsican\"            ; MessagesFile: \"compiler:Languages\\Corsican.isl\"
+Name: \"czech\"               ; MessagesFile: \"compiler:Languages\\Czech.isl\"
+Name: \"danish\"              ; MessagesFile: \"compiler:Languages\\Danish.isl\"
+Name: \"dutch\"               ; MessagesFile: \"compiler:Languages\\Dutch.isl\"
+Name: \"finnish\"             ; MessagesFile: \"compiler:Languages\\Finnish.isl\"
+Name: \"french\"              ; MessagesFile: \"compiler:Languages\\French.isl\"
+Name: \"german\"              ; MessagesFile: \"compiler:Languages\\German.isl\"
+Name: \"hebrew\"              ; MessagesFile: \"compiler:Languages\\Hebrew.isl\"
+Name: \"italian\"             ; MessagesFile: \"compiler:Languages\\Italian.isl\"
+Name: \"japanese\"            ; MessagesFile: \"compiler:Languages\\Japanese.isl\"
+Name: \"norwegian\"           ; MessagesFile: \"compiler:Languages\\Norwegian.isl\"
+Name: \"polish\"              ; MessagesFile: \"compiler:Languages\\Polish.isl\"
+Name: \"portuguese\"          ; MessagesFile: \"compiler:Languages\\Portuguese.isl\"
+Name: \"russian\"             ; MessagesFile: \"compiler:Languages\\Russian.isl\"
+Name: \"slovenian\"           ; MessagesFile: \"compiler:Languages\\Slovenian.isl\"
+Name: \"spanish\"             ; MessagesFile: \"compiler:Languages\\Spanish.isl\"
+Name: \"turkish\"             ; MessagesFile: \"compiler:Languages\\Turkish.isl\"
+Name: \"ukrainian\"           ; MessagesFile: \"compiler:Languages\\Ukrainian.isl\"
+")
+
+else()
+
+file(WRITE ${PROJECT_BINARY_DIR}/media-downloader_windows_installer_Qt5.iss
+"
+; Script generated by the Inno Setup Script Wizard.
+; SEE THE DOCUMENTATION FOR DETAILS ON CREATING INNO SETUP SCRIPT FILES!
+
+#define MyAppName            \"Media Downloader\"
+#define MyAppVersion         \"${PGR_VERSION}\"
+#define MyAppPublisher       \"Francis Banyikwa\"
+#define MyAppURL             \"https://github.com/mhogomchungu/media-downloader\"
+#define MyAppExeName         \"media-downloader.exe\"
+#define MyAppCopyright       \"${COPYRIGHT_YEARS}, Francis Banyikwa\"
+#define MyEXELocation        \"${PROJECT_BINARY_DIR}\\media-downloader.exe\"
+#define MyBuildPath          \"${PROJECT_BINARY_DIR}\"
+#define MyLibrariesLocation  \"${LIBRARIES_LOCATION}\"
+#define MyOutPutPath         \"${OUTPUT_PATH}\"
+#define MySourcesPath        \"${SOURCE_PATH}\"
 
 [Setup]
 AppId={{6DD595EF-ECA2-481B-B008-CB7302603A0D}
@@ -262,5 +352,7 @@ Name: \"spanish\"             ; MessagesFile: \"compiler:Languages\\Spanish.isl\
 Name: \"turkish\"             ; MessagesFile: \"compiler:Languages\\Turkish.isl\"
 Name: \"ukrainian\"           ; MessagesFile: \"compiler:Languages\\Ukrainian.isl\"
 ")
+
+endif()
 
 endif()
